tests/ui/async-await/issue-73541.rs
fn main() {
    'a: loop {
        || {
            loop { continue 'a }
            //~^ ERROR use of unreachable label `'a`
        };

    }
}
